bb-templates/dhqa/style.css
/*
Theme Name: DHQA
Theme URI: http://digitalhumanities.org/answers
Description: Theme for ADHO DH Q&A site.
Version: 0.1
Author: Joe Gilbert
Author URI: 
*/

/* Globals and Frame
=================================== */

@font-face {  
  font-family: "League Gothic";  
  src: url('fonts/leaguegothic-webfont.eot'); /* IE */  
  src: local("League Gothic"), url('fonts/LeagueGothic.ttf') format("truetype"); /* non-IE */  
}

html, body {
	height: 100%;
	min-height: 100%;	
}

html body {
	background: #373535 !important;
}

/* hack to fit ACH bg img */
.span-6 {
	width: 210px !important;
}

.prepend-6 {
	padding-left: 220px !important;
}

body .container {
	background: url("images/ach-wrapper.png") no-repeat scroll 0 0 #FFF;
	padding: 0px 20px;
	margin: 0 auto;
	border-left: 1px solid #888;
	border-right: 1px solid #888;
	font-family: "Lucida Grande",tahoma,helvetica,arial,sans-serif;
}

body a {
	color: #226;
}

body h1 a {
	color: #200;
}

body h1 a:hover {
	color: #400;
}

body input[type="checkbox"], body input[type="radio"], body input.checkbox, body input.radio {top: 0;}

input[type="submit"] {
	border: 1px solid #999;
	background-color: #ddd;
	line-height: 14px;
	padding: 2px 4px;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	font-size: 11px;
	
}

input[type="submit"]:hover {
	background-color: #eee;
	color: #400;
	cursor: pointer;
}

input[type="submit"]:active {
	border-color: #400;
}

.left { float: left; }

.right { float: right; }

.delete:hover {
	background-color: #c00;
	color: #fff;
}

img.avatar { border: 1px solid #ddd; }

.bozo { background-color: #eeee88; }

.alt.bozo { background-color: #ffff99; }

.deleted { background-color: #ee8888; }

.alt.deleted { background-color: #ff9999; }

/* Structure
=================================== */

#header p { margin-bottom: 0; font-weight: bolder;}
#header h1 {
	margin-bottom: 10px; 
	font-weight: normal; 
	font-family:"League Gothic","Lucida Grande",Tahoma,"Helvetica Neue",Arial,Helvetica,sans-serif;
	font-size: 5em;
	word-spacing: 0.1em;
	}
#header h1 a { text-decoration: none; }
#header h1 a:hover { color: #400; }

#header h3 {font-weight: lighter;}

#header div.login-container {
	padding-top: 2px;
}
#header div.search {
	border: 1px solid transparent;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	float: right;
	padding-top: 2px;
}

div.search form {
	float: right;
}

div.search input {
	border: 1px solid #999;
	background-color: #fdfdfd;
	padding: 2px 4px;
	line-height: 23px;
	font-size: 15px;
	margin: 0;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	
}

#main {
	margin-top: 40px;
}

.bbcrumb {
	text-transform: uppercase;
	font-size: 0.9em;
	letter-spacing: 1px;
	padding: 5px 0 20px;
	font-weight: bold;
}

.notice {
	border: 1px solid #4c9545;
	background-color: #abd8a2;
	color: #4c9545;
	font-size: 1.1em;
	font-weight: bold;
	padding: 10px 15px;
	margin: 0 0 1.1em;
}

.notice.error {
	border-color: #852424;
	background-color: #ca8a8a;
	color: #5d2424;
}

.notice p { margin-bottom: 0; }

/* Login Form
=================================== */

#header #ach-logo {
	text-indent: -9999px; 
	display: block; 
	height: 72px; 
	position: relative; 
	width: 950px; 
	right: 220px;
	margin-bottom: 10px;
}

#header form.login {
	display: inline-block;
	margin-bottom: 1em;
}

.header-button {
	display: block;
	float: left;
	text-align: center;
	background: #eee;	
	padding: 2px 4px 2px 26px;
	vertical-align: middle;
	border: 1px solid #999;
	margin-right: 5px;
	font-size: 15px;
	background: url("http://digitalhumanities.org/answers/my-plugins/best-answer/best-answer.png") no-repeat scroll 5px 50% #EEEEEE;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	
	}

.header-button:hover {
	background-color: #f7f7f7;
}

.header-button a {
	text-decoration: none;
}

.header-button.ask-link {
	background-color: #ffd;
	background-image: url('images/question.png');
}

.header-button.ask-link:hover {
	background-color: #ffb;
}

.header-button.profile-link {
	background-image: url('images/profile.png');
}

.header-button.admin-link {
	background-image: url('images/admin.png');
}

.header-button.login-link {
	background-image: url('images/logout.png');
}


form.login input {
	border: 1px solid #999;
	padding: 2px;
	line-height: 14px;
	font-size: 12px;
	margin: 0;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	
}

form.search-form input[type="text"] {
	height: 23px;
}

form.search-form input.submit {
	background-color: #eee;
	color: #226;
}

form.search-form input.submit:hover {
	background-color: #f7f7f7;
	color: #400;
}

form.login input.submit {
	float: left;
	display: block;
	line-height: 23px;
	padding: 2px 4px;
	border: 1px solid transparent;
	-moz-border-radius: 4px;
	-webkit-border-radius: 4px;
	border-radius: 4px;
	
}

form.login input.submit:hover {
	background-color: #ddd;
	color: rgb(0, 100, 0);
}

form.login input.submit:active {
	border-color: rgb(0, 100, 0);
}

div.remember {
	margin-top: 5px;
}

div.remember label {
	clear: both;
	padding: 0;
	margin: 6px 0 0 0;
	line-height: 12px;
}

div.remember input {
	top: 0;
}

form.login input#remember {
	border-width: 0;
	padding: 0;
	margin: 0;
	vertical-align: baseline;
}

/* Front Page
=================================== */

.frontpageheatmap {
	font-weight: normal;
	line-height: 30px;
	padding-bottom: 10px;
}

#front-page #main h2, #forum-page #main h2, h2.post-form, #userlogin, #currentfavorites, #register, #passwordrecovery {
	font-family: "League Gothic","Arial Narrow","Helvetica Neue",Helvetica,Arial,sans-serif;
	font-weight: normal;
	font-size: 3em;
	border-bottom: 1px solid #ddd;
	margin: 0 0 10px;
	padding: 0 0 5px;
	color: #400;
	word-spacing: 0.1em;
	letter-spacing: 0.022em;
}

#reg-or {
	text-transform: lowercase;
	font-variant: small-caps;
	font-size: 14px;
}
/* ... */

